--- a/frontend/src/Css/header.css
+++ b/frontend/src/Css/header.css
@@ -533,9 +533,9 @@ span a{
 .search-container-1{
     position: absolute;
     background-color: transparent;
-    width: 45%;
-    top: 90%;
-    left: 3.5%;
+    width: 177.4px;
+    top: 30.88px;
+    left: 0;
     z-index: 100;
 }
 .search-container-2{
@@ -565,7 +565,7 @@ span a{
     text-decoration: none;
 }
 .result-item:hover{
-    background-color: tomato;
+    background-color: gray;
     color: white;
     transform: translateX(60deg);
     transition-duration: 0.7s;
