--- a/frontend/src/Css/delivery.css
+++ b/frontend/src/Css/delivery.css
@@ -226,7 +226,7 @@ margin-top: 3px;
 }
 
 .summary-total-right div:nth-child(1){
-    color: coral;
+    color: #343a40;
     font-weight: 700;
 }
 
