--- a/frontend/src/Css/menu.css
+++ b/frontend/src/Css/menu.css
@@ -427,11 +427,7 @@ select:focus{
 .top-footer-right-menu{
     align-items: baseline;
 }
-.top-footer-right-header h2{
-    color: yellow;
-    font-size: 30px;
-    font-weight: bold;
-}
+
 .top-footer-right-menu{
     flex-direction: column;
 }
@@ -451,4 +447,10 @@ select:focus{
     line-height: inherit;
     outline: none;
     padding-left: 10px;
+}
+
+.top-footer-right-header h2{
+    color: white!important;
+    font-size: 30px;
+    font-weight: bold;
 }
